<resources>
    <string name="app_name">Implicit Intents 2</string>
    <string name="open_website_button">Open Website</string>
    <string name="edittext_uri">https://developer.google.com</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="take_picture">Take Picture</string>
</resources>
